--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
@@ -18,9 +18,9 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \textcolor{\secondaryColor}{\textbf{Ore complessive}}\\	
 \endhead
         
-\AD{}                     &  4 &  - &  - & - & - & - & - \\
-\AT{}                     &  - &  - &  - & - & - & - & - \\
-\AW{}                     &  - &  - &  - & - & - & - & - \\
+\AW{}                     &  - &  - &  14 & - & - & 9 & 23 \\
+\AT{}                     &  - &  10 & 10 & - & - & 8 & 28 \\
+\AD{}                     &  - &  - &  14 & - & - & 10 & 24 \\
 \EC{}                     &  - &  - &  - & - & - & - & - \\
 \EM{}                     &  - &  - &  - & - & - & - & - \\
 \FP{}                     &  4 &  - &  - & 4 & - & - & - \\
@@ -62,7 +62,7 @@ La suddivisione delle ore svolte da ciascun componente del gruppo per ogni ruolo
 \end{center}
 
 \clearpage
-
+\begin{comment}
 \subsubsection{Costo risultante}
 La seguente tabella rappresenta per ogni ruolo le ore totali investite e il corrispondente costo in euro:
 {
@@ -102,3 +102,4 @@ La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente ar
 		}
 	\end{tikzpicture}
 \end{center}
+\end{comment}
