--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -14,6 +14,8 @@
 \usepackage{blindtext}
 \usepackage{pgf-pie}
 \usepackage{pgfplots}
+\usepackage{lmodern}
+\usepackage{comment}
 \input{./src/Comandi.tex}
 
 \begin{document}
