--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -1,6 +1,6 @@
 \subsection{Analisi dei Requisiti}
 \subsubsection{Bilancio}
-Il bilancio della \glo{fase} di Analisi è negativo, ovvero il gruppo ha impiegato più ore di quelle anticipate, quindi il costo finale della fase di Analisi supera l'aspettativa calcolata in precedenza.\\
+Il bilancio della fase di Analisi è positivo, ovvero il gruppo ha impiegato meno ore di quelle anticipate, quindi il costo finale della fase di Analisi è minore dell'aspettativa calcolata in precedenza.\\
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 
 {
@@ -17,29 +17,33 @@ La seguente tabella illustra la differenza oraria ed economica rilevata a poster
 \textcolor{\secondaryColor}{\textbf{Costo effettivo (in \euro{})}} & 
 \textcolor{\secondaryColor}{\textbf{Variazione di costo (in \euro{})}}\\	
 	
-Responsabile    &  x &   0 & x & x &    0 \\
-Amministratore  &  x & x & x & x & x \\
-Analista        & x & x & x & x & x \\
-Progettista     &   0 &   0 &    0 &    0 &    0 \\
-Programmatore   &   0 &   0 &    0 &    0 & x \\
-Verificatore    &  x &  x & x & x & x \\
-\textbf{Totale} & x & x & x & x & x \\	
+Responsabile    &  35 & 0 & 1050 & 1050 &  0 \\
+Amministratore  &  35 & 0 & 700 & 700 & 0 \\
+Analista        & 71 & 14 & 1775 & 1425 & 350 \\
+Progettista     &   0 &   0 &    0 &  0 & 0 \\
+Programmatore   &   0 &   0 &    0 &  0 & 0 \\
+Verificatore    &  60 &  5 & 900 &  & 75 \\
+\textbf{Totale} & 201 & 182 & 4425 & 4000 & 425 \\	
 
 \end{longtable}
 }
 
 \subsubsection{Conclusioni}
-Come riportato dalla tabella, il bilancio risulta essere negativo per un eccesso di ore nei seguenti ruoli:
+Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
 \begin{itemize}
-	\item \textbf{Amministratore}: È stata sottostimata l'assegnazione delle ore per la stesura delle \NdP{}, la gestione della documentazione è stata più onerosa di quanto preventivato inizialmente e non è stata fatta una giusta ed esaustiva definizione delle tecnologie per le quali è stata necessaria una loro revisione;
-	\item \textbf{Analista}: Sono servite più ore del previsto per ottenere una struttura coesa e dettagliata dei \glo{requisiti};
-	\item \textbf{Verificatore}: Un lavoro maggiore degli analisti e amministratori ha portato ad un dispendio di ore di verifica superiore rispetto alle aspettative.
+	\item \textbf{Responsabile}:{i componenti designati a questo ruolo in questa fase a fare i responsabili non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
+	\item \textbf{Amministratore}:{uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo;}
+	\item \textbf{Analista}:{lo scostamento maggiore si è fatta una sovrastima delle ore richieste a tale compito perchè alcune attività di analisi si pensavano richiedessero più tempo;}
+	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca.}
 \end{itemize}
 
 \subsubsection{Ragionamento sugli scostamenti}
-In relazione alle motivazioni espresse nelle conclusioni, possiamo affermare che la principale causa dell'eccesso di ore impiegate sia stata dovuta dall'inesperienza dei membri del gruppo. Questa ha portato alla necessità di rielaborare il lavoro, precedentemente svolto in maniera inadeguata, consumando risorse limitate.
-Dunque, alla luce di questa problematica, pensiamo che nelle fasi di Progettazione riscontreremo le stesse difficoltà. Come soluzione a questo problema presteremo più attenzione nella pianificazione delle attività meno conosciute. Mentre per la produzione dei documenti, grazie all'esperienza acquisita, possiamo ridurre il margine utile ad assorbire eventuali ritardi.
-
+La suddivisione a stadi di una fase permette di migliorare la produttività del team, visto che viene effettuato un check intermedio alla fine di uno stadio:
+\begin{itemize}
+	\item Dai \textbf{verificatori}:che validano i deliverables relativi a quello stadio;
+	\item E dal \textbf{responsabile}:che verifica la presenza di eventuali problematiche.
+\end{itemize}
+Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
 \subsubsection{Preventivo a finire}
-Il costo effettivo di questa prima \glo{fase} non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.\\
-Ciò non toglie che, come evidenziato ragionando sugli scostamenti, il gruppo deve prestare più attenzione e ottimizzare il proprio tempo al fine di evitare di superare il preventivo stabilito. 
+Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.\\
+Ciò non toglie che ragionando sugli scostamenti, il gruppo deve prestare qualche attenzione in più sulla pianificazione oraria, ma nel complesso il team pianifica e lavora bene.
