--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -59,7 +59,7 @@ Questi test vengono effettuati con la partecipazione del committente, cui compit
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo {\Gruppo}, adotterà la seguente nomenclatura:
-\begin{center} \textbf{T[t]} \end{center}
+\begin{center} \textbf{T[t][x][e]} \end{center}
 Dove:
 \begin{itemize}
 	\item T è una keyword statica per identificare appunto un “Test”
@@ -71,4 +71,6 @@ Dove:
 			\item R: test di regressione;
 			\item A: test di accettazione.
 		\end{itemize}
+		\item x è l'ID univoco e prograssivo utile per identificare il test;
+		\item e identifica l'esito di un test, che può essere positivo o negativo.
 \end{itemize}
