--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -4,8 +4,8 @@ Ogni documento prodotto che verrà consegnato assieme al software \NomeProgetto{
 \subsubsection{Struttura prima pagina}
 La prima pagina del documento è così formata:
 \begin{itemize}
-	\item logo del gruppo: il logo del gruppo {\Gruppo} è visibile sulla prima pagina ed è posizionato al centro della stessa;
-	\item gruppo e progetto: il nome del gruppo è visibile immediatamente sotto il logo. In aggiunta, è presente anche la lista dei nomi dei contributori dello specifico documento;
+	\item logo del gruppo: il logo del gruppo {\Gruppo}, comprensivo di nome, è visibile sulla prima pagina ed è posizionato al centro della stessa;
+	\item lista dei contributori: posizionata sotto il logo del gruppo, indica i nomi dei contributori dello specifico documento;
 	\item tabella: presente sotto il titolo del documento, racchiude le seguenti informazioni:
 	\begin{itemize}
 		\item versione: indica la versione del documento;
@@ -44,6 +44,7 @@ La struttura delle pagine di contenuto è la seguente:
 	\item sezione: il nome ed il numero della sezione sono posizionati in centro alla pagina;
 	\item intestazione: è l’intestazione del documento;
 	\item contenuto: il contenuto principale del documento è posizionato dopo l’intestazione dello stesso;
+	\item nome e versione del documento: presente in basso a sinistra, indica appunto il nome del documento in oggetto e la sua attuale versione di scrittura;
 	\item numero pagina: presente in basso a destra, su ogni pagina ad esclusione della prima pagina.
 \end{itemize}
 
