--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -52,7 +52,7 @@
 		\rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Matricola}} & \textcolor{\secondaryColor}{\textbf{Indirizzo di posta elettronica}}\\\endhead	
         {Elvis Murtezan} & 1096758 & {elvis.murtezan@studenti.unipd.it}\\   
-        {Giovanni Grigoletto} & 1175087 & {giovanni.grigoletto@studenti.unipd.it}\\    
+        {Giovanni Grigoletto} & 1175087 & {giovanni.grigoletto.1@studenti.unipd.it}\\    
         {Andrea De Tomasi} & 1187099 & {andrea.detomasi@studenti.unipd.it}\\    
         {Alessio Trevisan} & 1xxxxxxx & {alessio.trevisan@studenti.unipd.it}\\    
         {Abdelwahad Kandoul} & 1120176 & {abdelwahad.kandoul@studenti.unipd.it} \\    
