--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -2,7 +2,7 @@
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
     \renewcommand{\arraystretch}{1.5}
     \centering
-    \begin{longtable}{ c c  C{4cm}  c  c }
+    \begin{longtable}{ c c  C{3.5cm}  C{3.5cm}  c }
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{
         \textbf{Versione}}     & \textcolor{\secondaryColor}{\textbf{Data}}       & \textcolor{\secondaryColor}
@@ -28,7 +28,7 @@
         0.0.1  & 
         2021-01-05 & 
         Stesura documento & 
-        Giovanni Grigoletto \newline Elvis Murtezan  & 
+        Giovanni Grigoletto, Elvis Murtezan  & 
         \redattore{} \\
     \end{longtable}
 }
