--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
@@ -13,7 +13,7 @@ Sigle identificative per i ruoli indicati nelle tabelle e nei grafici:
 	\begin{longtable}{ C{5cm} C{4cm} C{5cm} }
 		\caption{Tabella di redazione}\\
 		\rowcolor{\primaryColor}
-        \textcolor{\secondaryColor}{\textbf{Ruolo}} & \textcolor{\secondaryColor}{\textbf{Costo per ora (in e)}} \\ \endhead        		
+        \textcolor{\secondaryColor}{\textbf{Ruolo}} & \textcolor{\secondaryColor}{\textbf{Costo per ora (in \euro{})}} \\ \endhead        		
         {\responsabile} & {30} \\
         {\admin} & {20} \\
         {\analista} & {25} \\
