--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -9,13 +9,13 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \subsection{Stadio 1 - Organizzazione preliminare}\label{sec:Stadio1}
 \input{src/Pianificazione/src/Stadio1.tex}
 
-\subsection{Stadio 2 - Soddisfacimento requisiti di ingresso}\label{sec:Stadio2}
+\subsection{Stadio 2 - Soddisfacimento requisiti d'ingresso}\label{sec:Stadio2}
 \input{src/Pianificazione/src/Stadio2.tex}
     
-\subsection{Stadio 3 - Consolidamento delle componenti}\label{sec:Stadio3}
+\subsection{Stadio 3 -Strutturazione delle componenti}\label{sec:Stadio3}
 \input{src/Pianificazione/src/Stadio3.tex}
     
-\subsection{Stadio 4 - Progettazione e sviluppo}\label{sec:Stadio4}
+\subsection{Stadio 4 - Concretizzazione e sviluppo}\label{sec:Stadio4}
 \input{src/Pianificazione/src/Stadio4.tex}
     
 \subsection{Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
