--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{v0.0.1}
+\newcommand{\Versionedoc}{0.0.1}
 
 \newcommand{\Distribuzione}{
 \proponente{} \newline
