--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -1,1 +1,28 @@
-Di seguito verrà riportata e descritta la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette stadi e tra di essi si possono riconoscere essenzialmente quattro fasi: analisi, progettazione, codifica e \glo{validazione}. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso.\\
+Di seguito verrà riportata la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette stadi e tra di essi si possono riconoscere essenzialmente quattro \glo{fasi}: analisi, progettazione, codifica e validazione. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso. Nei successivi paragrafi verranno descritti ognuno più nel dettaglio.\\
+Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è concettualmente collocato all'interno della rispettiva fase:
+
+\begin{itemize}
+    \item \textbf{Fase di Analisi}:
+    \begin{itemize}
+        \item Stadio 1 - Organizzazione preliminare;
+        \item Stadio 2 - Soddisfacimento requisiti d'ingresso.
+    \end{itemize}
+
+    \item \textbf{Fase di Progettazione}:
+    \begin{itemize}
+        \item Stadio 3 - Strutturazione delle componenti;
+    \end{itemize}
+
+    \item \textbf{Fase di Codifica}:
+    \begin{itemize}
+        \item Stadio 4 - Concretizzazione e sviluppo;
+        \item Stadio 5 - Sviluppo e rifinitura.
+    \end{itemize}
+
+    \item \textbf{Fase di Validazione}:
+    \begin{itemize}
+        \item Stadio 6 - Qualifica e testing;
+        \item Stadio 7 - Validazione e collaudo.
+    \end{itemize}
+\end{itemize}
+
