--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Conclusioni.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Conclusioni.tex
@@ -1,1 +1,1 @@
-Nonostante tale capitolato abbia destato particolare interesse all'interno del team di lavoro, sia a livello tecnologico che di competenze curricolari, il gruppo si è mostrato più stimolato verso un altro progetto diversamente allettante.
+Benché tale capitolato abbia destato particolare interesse all’interno del gruppo, dato soprattutto dalla possibilità di utilizzare tecnologie innovative, il team di lavoro ha valutato la complessità di tale progetto come molto elevata e ha preferito orientarsi verso un’altra alternativa altrettanto stimolante.
