Preventivo architettura+preventivo dettaglio
Almost done except to check if the hours are counted right & no one reached the maximum hours

--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -60,3 +60,5 @@
         {Edoardo Caregnato} & 1096077 & {edoardo.caregnato@studenti.unipd.it}\\       
 	\end{longtable}
 }
+\subsection{Note}
+All'inizio di ogni stadio viene concordata dal team una rotazione del responsabilità.
