--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Finalita_del_progetto.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Finalita_del_progetto.tex
@@ -1,1 +1,1 @@
-Lo scopo del progetto è creare un'applicazione web di e-commerce dove i protagonisti saranno i clienti che acquisteranno diversi articoli sia fisici che di tipo servizi e i venditori dove metteranno a disposizione diversi beni. 
+L’obiettivo del capitolato è la creazione di una piattaforma web di e-commerce nella quale ci saranno due protagonisti principali come consumatori che acquisteranno diversi articoli sia fisici che di tipo servizi e produttori i quali metteranno a disposizione diversi beni. Il tutto tramite il trasferimento di denaro e dati per eseguire queste transazioni.
