--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Finalita_del_progetto.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Finalita_del_progetto.tex
@@ -1,1 +1,1 @@
- Il prodotto finale sarà un algoritmo di sincronizzazione e un'interfaccia utilizzabile con i sistemi operativi più diffusi(Linux,Windows, Mac) senza richiedere all'utente finale l'installazione manuale di ulteriori prodotti per il funzionamento. Requisito fondamentale è un Pattern MVC  che permetterà un cambiamento rapito tra l'algoritmo o dell'interfaccia utente.
+ Il prodotto finale sarà un algoritmo di sincronizzazione e un'interfaccia grafica utilizzabile con i sistemi operativi più diffusi(Linux, Windows, Mac) senza richiedere all'utente finale l'installazione manuale di ulteriori prodotti per il funzionamento. Requisito fondamentale è un Pattern MVC che permetterà un cambiamento rapido dell'algoritmo o dell'interfaccia utente.
