Aggiunto anche admin può prenotare

--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiAccettazione/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiAccettazione/main.tex
@@ -9,10 +9,9 @@
         \textbf{Codice}}     & \textcolor{\secondaryColor}
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Esito}} \\
 
-
         TA1&
-        L'utente autenticato deve poter essere in grado di creare una prenotazione.\newline
-        All'utente autenticato viene chiesto di:
+        L'utente autenticato e l'amministratore devono poter essere in grado di creare una prenotazione.\newline
+        All'utente autenticato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
@@ -23,8 +22,8 @@
         \end{itemize}&
         NI\\
         TA2&
-        L'utente autenticato deve poter essere in grado di modificare una prenotazione.\newline
-        All'utente autenticato viene chiesto di:
+        L'utente autenticato e l'amministratore devono poter essere in grado di modificare una prenotazione.\newline
+        All'utente autenticato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di modifica di una prenotazione;
             \item verificare che sia possibile modificare una prenotazione specificando una nuova data e ora;
@@ -35,8 +34,8 @@
         \end{itemize}&
         NI\\
         TA3&
-        L'utente autenticato deve poter essere in grado di eliminare una prenotazione.\newline
-        All'utente autenticato viene chiesto di:
+        L'utente autenticato e l'amministratore devono poter essere in grado di eliminare una prenotazione.\newline
+        All'utente autenticato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di cancellazione di una prenotazione;
             \item verificare che sia possibile eliminaree una prenotazione effettuata in precedenza per una specifica data e ora;
@@ -44,8 +43,8 @@
         \end{itemize}&
         NI\\
         TA4&
-        L'utente autenticato deve poter essere in grado di visualizzare le prenotazioni attive nel sistema.\newline
-        All'utente autenticato viene chiesto di:
+        L'utente autenticato e l'amministratore devono poter essere in grado di visualizzare le prenotazioni attive nel sistema.\newline
+        All'utente autenticato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
             \item verificare che siano elencate correttamente tutte le sue prenotazioni attive.
