aggunta tab. occorrenza rischi + alcuni termini glossario

--- a/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
@@ -15,6 +15,9 @@
 \TermineGlossario{GitHub}
 \DefinizioneGlossario{È un servizio di hosting per progetti software. Il nome deriva dal fatto che è una implementazione dello strumento di controllo versione distribuito Git.}
 
+\TermineGlossario{GitKraken}
+\DefinizioneGlossario{Client GUI che permette la gestione, clonazione e sincronizzazione in locale di repository Git con funzioni trouble ticket.}
+
 \TermineGlossario{GitLab}
 \DefinizioneGlossario{È una piattaforma web open source che permette la gestione di repository Git e di funzioni trouble ticket.}
 
@@ -27,5 +30,8 @@
 \TermineGlossario{Gradle} 
 \DefinizioneGlossario{È un sistema open source di compilazione che viene utilizzato per la automate building, i testing, le distribuizioni, ecc. Ogni progetto Android ha 
 bisogno di un Gradle per generare un apk dai file .java e .xml .}
+
+\TermineGlossario{GUI (Graphical User Interface, Interfaccia grafica)}
+\DefinizioneGlossario{È un tipo di interfaccia utente che consente l'interazione uomo-macchina in modo visuale utilizzando rappresentazioni grafiche piuttosto che riga di comando.}
 
 \clearpage
