--- a/DocumentiEsterni/Glossario/src/Alfabeto/L.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/L.tex
@@ -1,4 +1,8 @@
 \section{L}
+
+\TermineGlossario{LaTex}
+\DefinizioneGlossario{È un linguaggio di markup per la preparazione di testi, basato sul programma di composizione tipografica TEX.}
+
 \TermineGlossario{Librerie}
 \DefinizioneGlossario{È una raccolta di componenti che offrono servizi ad un livello di astrazione piuttosto basso, ovvero assemblare componenti semplici e predefiniti per ottenere strutture complesse specializzate.}
 
