--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
@@ -5,3 +5,6 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
 
 \subsection{Tabella dei rischi}\label{sec:TabellaRischi}
 \input{src/AnalisiRischi/src/TabellaRischi.tex}
+
+\subsection{Occorrenza dei rischi}\label{sec:OccorrenzaRischi}
+\input{src/AnalisiRischi/src/OccorrenzaRischi.tex}
