--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
@@ -7,10 +7,10 @@ Gli aspetti su cui ci si è maggiormente concentrati sono:
         \item \textbf{RPx}: rischio personale, relativo a questioni private esterne che possono riguardare uno o più membri del gruppo;
         \item \textbf{ROx}: rischio organizzativo, comprendente problemi di tempistiche o eventuali disguidi all'interno del gruppo;
     \end{itemize}
-    Dove il carattere \textbf{x} indica per ogni tipologia una lettera minuscola assegnata, in ordine alfabetico, con lo scopo di dare un'identificazione univoca al rischio corrispondente.
+    Dove il carattere \textbf{x} indica per ogni tipologia una lettera minuscola assegnata, in ordine alfabetico crescente, con lo scopo di dare un'identificazione univoca al rischio corrispondente.
     
 \subsubsection{Probabilità}
-    Indica la probabilità che il rischio si presenti e può essere alta, media o bassa. Utile perchè permette di porre diversa attenzione alle problematiche identificate con una certa probabilità, ponendo particolare riguardo a quelle con possibile occorrenza alta.
+    Indica la probabilità che il rischio si presenti e può essere alta, media o bassa. Utile perchè permette di porre diversa attenzione alle problematiche identificate con una certa probabilità, ponendo particolare riguardo a quelle con possibile occorrenza più alta.
 
 \subsubsection{Gravità}
     Specifica quanto il rispettivo rischio può impattare sullo svolgimento del lavoro:
