--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -2,8 +2,8 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
 {
         \rowcolors{2}{\evenRowColor}{\oddRowColor}
         \renewcommand{\arraystretch}{1.5}
-        
-        \begin{longtable}{|p{1cm}|p{3cm}|p{1cm}|p{1cm}|p{3cm}|p{3cm}|}
+        \centering
+        \begin{longtable}{|p{0.8cm}|p{3cm}|p{1cm}|p{1cm}|p{3cm}|p{3.2cm}|}
         \caption{Tabella dei rischi}\\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Cod.}} & 
@@ -25,12 +25,12 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         media &
         bassa &
         Comunicare tra i membri del gruppo per informarsi a vicenda sulle metodologie solitamente usate per determinate procedure. &
-        I membri già agili in determinate azioni daranno consigli utili ai meno esperti. \\
+        I membri già agili in determinate situazioni daranno consigli utili ai meno esperti.\\
         \hline
         RTc &
         Impossibilità di utilizzare alcuni strumenti necessari al progetto, dovuta a malfunzionamenti o mancato possesso. &
         bassa &
-        alta &
+        media &
         Una volta che si ha chiaro cosa sia necessario, informare tempestivamente il gruppo dell'eventuale mancanza. &
         Munirsi al più presto del necessario. Qualora non fosse possibile altri membri del gruppo prenderanno in carico le relative mansioni, affidando all'interessato quelle che non hanno necessità dell'elemento in questione. \\
         \hline
@@ -45,7 +45,7 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Tempo a disposizione scarso per lo svolgimento di alcuni compiti onerosi. &
         alta &
         alta &
-        In base all'esperienza cercare di stimare il tempo necessario per un determinato compito. &
+        In base all'esperienza cercare di stimare il tempo necessario effettivo per un determinato compito. &
         Si cerca di ottimizzare distribuendo le diverse parti del lavoro tra i membri più esperti o adatti a svolgerle. \\
         \hline
         RPa &
@@ -58,7 +58,7 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         RPb &
         Indisposizione improvvisa di un membro del gruppo (dovuta ad impegni o malattia) che impossibilita lo svolgimento di alcuni compiti. &
         bassa &
-        media &
+        alta &
         Comunicare tempestivamente al gruppo di essere impossibilitati. &
         A seconda dell'importanza del compito assegnato si valuterà se concedere più tempo oppure suddividerlo tra i restanti membri. \\
         \hline
@@ -84,11 +84,11 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Prendere atto della cosa per programmare in maniera più efficace i futuri compiti da svolgere. \\
         \hline
         ROd &
-        Mancato assolvimento dei compiti assegnati. &
+        Mancato assolvimento o ritardo dei compiti assegnati. &
         bassa &
         alta &
         All'avvicinarsi dello scadere dei tempi stabiliti, il responsabile si informerà sullo stato dei lavori. &
-        Nei casi più urgenti i restanti membri del gruppo valuteranno di suddividersi il lavoro da svolgere. \\
+        Nei casi più urgenti i restanti membri del gruppo valuteranno se suddividersi il lavoro da svolgere. \\
         \hline
     
         \end{longtable}
