--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/main.tex
@@ -7,7 +7,7 @@
 \subsection{Scopo generale del prodotto}\label{sec:Scopo-prodotto}
 \input{src/Introduzione/src/ScopoProdotto.tex}
 
-\subsection{Glossario}\label{sec:Glossario}
+\subsection{Riferimenti al glossario}\label{sec:Glossario}
 \input{src/Introduzione/src/Glossario.tex}
 
 \subsection{Scadenze}\label{sec:Scadenze}
